; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_ui_memblt.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_ui_memblt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@mousex = common dso_local global i32 0, align 4
@mousey = common dso_local global i32 0, align 4
@g_server_bpp = common dso_local global i32 0, align 4
@g_server_Bpp = common dso_local global i32 0, align 4
@False = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_memblt(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i64 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_2__*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i64 %5, i64* %14, align 8
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %21 = call i64 @warp_coords(i32* %10, i32* %11, i32* %12, i32* %13, i32* %15, i32* %16)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %109

23:                                               ; preds = %8
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %13, align 4
  %28 = call i64 @contains_mouse(i32 %24, i32 %25, i32 %26, i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %23
  %31 = load i32, i32* @mousex, align 4
  %32 = load i32, i32* @mousey, align 4
  %33 = call i32 @draw_cursor_under(i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %30, %23
  %35 = load i64, i64* %14, align 8
  %36 = inttoptr i64 %35 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %36, %struct.TYPE_2__** %17, align 8
  %37 = load i32, i32* %9, align 4
  %38 = icmp eq i32 %37, 12
  br i1 %38, label %39, label %60

39:                                               ; preds = %34
  %40 = load i32, i32* %10, align 4
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* %12, align 4
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* %15, align 4
  %45 = load i32, i32* %16, align 4
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* @g_server_bpp, align 4
  %53 = call i32 @get_ptr(i32 %44, i32 %45, i32 %48, i32 %51, i32 %52)
  %54 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %55 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = load i32, i32* @g_server_Bpp, align 4
  %58 = mul nsw i32 %56, %57
  %59 = call i32 @accel_draw_box(i32 %40, i32 %41, i32 %42, i32 %43, i32 %53, i32 %58)
  br label %102

60:                                               ; preds = %34
  store i32 0, i32* %18, align 4
  br label %61

61:                                               ; preds = %98, %60
  %62 = load i32, i32* %18, align 4
  %63 = load i32, i32* %13, align 4
  %64 = icmp slt i32 %62, %63
  br i1 %64, label %65, label %101

65:                                               ; preds = %61
  store i32 0, i32* %19, align 4
  br label %66

66:                                               ; preds = %94, %65
  %67 = load i32, i32* %19, align 4
  %68 = load i32, i32* %12, align 4
  %69 = icmp slt i32 %67, %68
  br i1 %69, label %70, label %97

70:                                               ; preds = %66
  %71 = load i32, i32* %15, align 4
  %72 = load i32, i32* %19, align 4
  %73 = add nsw i32 %71, %72
  %74 = load i32, i32* %16, align 4
  %75 = load i32, i32* %18, align 4
  %76 = add nsw i32 %74, %75
  %77 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %78 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 4
  %80 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %81 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %80, i32 0, i32 0
  %82 = load i32, i32* %81, align 4
  %83 = load i32, i32* @g_server_bpp, align 4
  %84 = call i32 @get_pixel2(i32 %73, i32 %76, i32 %79, i32 %82, i32 %83)
  store i32 %84, i32* %20, align 4
  %85 = load i32, i32* %10, align 4
  %86 = load i32, i32* %19, align 4
  %87 = add nsw i32 %85, %86
  %88 = load i32, i32* %11, align 4
  %89 = load i32, i32* %18, align 4
  %90 = add nsw i32 %88, %89
  %91 = load i32, i32* %20, align 4
  %92 = load i32, i32* %9, align 4
  %93 = call i32 @set_pixel(i32 %87, i32 %90, i32 %91, i32 %92)
  br label %94

94:                                               ; preds = %70
  %95 = load i32, i32* %19, align 4
  %96 = add nsw i32 %95, 1
  store i32 %96, i32* %19, align 4
  br label %66

97:                                               ; preds = %66
  br label %98

98:                                               ; preds = %97
  %99 = load i32, i32* %18, align 4
  %100 = add nsw i32 %99, 1
  store i32 %100, i32* %18, align 4
  br label %61

101:                                              ; preds = %61
  br label %102

102:                                              ; preds = %101, %39
  %103 = load i32, i32* %10, align 4
  %104 = load i32, i32* %11, align 4
  %105 = load i32, i32* %12, align 4
  %106 = load i32, i32* %13, align 4
  %107 = load i32, i32* @False, align 4
  %108 = call i32 @cache_rect(i32 %103, i32 %104, i32 %105, i32 %106, i32 %107)
  br label %109

109:                                              ; preds = %102, %8
  ret void
}

declare dso_local i64 @warp_coords(i32*, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @contains_mouse(i32, i32, i32, i32) #1

declare dso_local i32 @draw_cursor_under(i32, i32) #1

declare dso_local i32 @accel_draw_box(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @get_ptr(i32, i32, i32, i32, i32) #1

declare dso_local i32 @get_pixel2(i32, i32, i32, i32, i32) #1

declare dso_local i32 @set_pixel(i32, i32, i32, i32) #1

declare dso_local i32 @cache_rect(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
